<resources>
    <string name="app_name">LoL Tournaments</string>

    <string name="title_tournaments">Tournaments</string>
    <string name="title_teams">Teams</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_more">More</string>
    <string name="title_completed">Completed</string>
    <string name="title_running">Running</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_matches">Matches</string>
    <string name="title_members">Members</string>
    <string name="title_about_app">About App</string>
    <string name="title_notification">Notification</string>
    <string name="title_share">Share</string>
    <string name="title_app_owner">Made by:</string>
    <string name="title_version">Version:</string>
    <string name="title_contact">Contact:</string>


    <string name="text_empty_series">Empty series.</string>
    <string name="text_empty_teams">Empty teams.</string>
    <string name="text_empty_notification">Empty Notification.</string>
    <string name="text_id">Id:</string>
    <string name="text_start">Start:</string>
    <string name="text_end">End:</string>
    <string name="text_league">League:</string>
    <string name="text_season">Season:</string>
    <string name="text_slug">Slug:</string>
    <string name="text_tier">Tier:</string>
    <string name="text_winner">Winner:</string>
    <string name="text_serie">Serie:</string>
    <string name="text_prize">Prize:</string>
    <string name="text_name">Name:</string>
    <string name="text_location">Location:</string>
    <string name="text_birthday">Birthday:</string>
    <string name="text_hometown">Hometown:</string>
    <string name="text_nationality">Nationality:</string>
    <string name="text_role">Role:</string>
    <string name="text_dev">Nguyen Huu Nam</string>
    <string name="text_version">1.0</string>
    <string name="text_facebook">https://www.facebook.com/zGararz</string>
    <string name="link_app">Lol Tournament</string>
</resources>
