<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dp_370"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_10">

    <TextView
        android:id="@+id/textTitleOwner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_app_owner"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2" />

    <TextView
        android:id="@+id/textOwner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:text="@string/text_dev"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textTitleOwner"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTitleVersion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/title_version"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitleOwner"
        app:layout_constraintWidth_percent="0.2" />

    <TextView
        android:id="@+id/textVersion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/text_version"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textTitleVersion"
        app:layout_constraintTop_toBottomOf="@+id/textTitleOwner" />

    <TextView
        android:id="@+id/textTitleContact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/title_contact"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textVersion"
        app:layout_constraintWidth_percent="0.2" />

    <TextView
        android:id="@+id/textContact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/text_facebook"
        android:textColor="@android:color/black"
        android:textColorLink="@android:color/holo_blue_dark"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textTitleContact"
        app:layout_constraintTop_toBottomOf="@+id/textVersion" />
</androidx.constraintlayout.widget.ConstraintLayout>
